<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".addmusic.AddMusicActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

            <com.example.musicplayer.customview.CustomAutoCompleteTextView
                android:id="@+id/artist_name_txt_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/add_artist_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

            <com.example.musicplayer.customview.CustomEditText
                android:id="@+id/album_picture_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/add_album_picture"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/colorPrimaryDark">

            <com.example.musicplayer.customview.CustomEditText
                android:id="@+id/music_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/add_music_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/colorPrimaryDark">

            <com.example.musicplayer.customview.CustomEditText
                android:id="@+id/music_url_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/add_music_url"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <com.example.musicplayer.customview.CustomButton
            android:id="@+id/add_music_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_music"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>


</RelativeLayout>